fix API filterByQuestionId
