# docs/swagger.yaml
@@ -142,29 +142,6 @@ info:
   title: Swagger UI for E-Rescues
   version: "1.0"
 paths:
-  /amswer/filter/{question_id}:
-    get:
-      consumes:
-      - application/json
-      description: 'input: amswer''s group_id => output: group amswers'
-      parameters:
-      - description: group_id
-        in: path
-        name: question_id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/model.Response'
-      security:
-      - ApiKeyAuth: []
-      summary: filter amswer by group_id
-      tags:
-      - amswer-manager-apis
   /answer/{id}:
     get:
       consumes:
@@ -252,6 +229,29 @@ paths:
       summary: Delete answer by id
       tags:
       - answer-manager-apis
+  /answer/filter/{question_id}:
+    get:
+      consumes:
+      - application/json
+      description: 'input: amswer''s question_id => output:  amswers'
+      parameters:
+      - description: question_id
+        in: path
+        name: question_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: filter amswer by question_id
+      tags:
+      - amswer-manager-apis
   /answer/update:
     put:
       consumes:
